--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <i>See linked resources at the bottom for more information on how to use this tool</i>
     <br><br>
     <script type="text/javascript" src="files/config_new.js?v=1"></script>
-    <script type="text/javascript" src="files/heatlossjs_KPC9_2Mar1334.json?v=1"></script>
+    <script type="text/javascript" src="files/heatlossjs_KPC9_2Mar1334.js?v=1"></script>
     <link rel="stylesheet" type="text/css" href="heatlossjs/style.css?v=1" />
     <div id="heatloss"></div>
     <br><br>
