--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>heatloss.js example</h2>
     <i>See linked resources at the bottom for more information on how to use this tool</i>
     <br><br>
-    <script type="text/javascript" src="files/config_new.js?v=1"></script>
+    <!--<script type="text/javascript" src="files/config_new.js?v=1"></script>-->
     <script type="text/javascript" src="files/heatlossjs_KPC9_2Mar1334.js?v=1"></script>
     <link rel="stylesheet" type="text/css" href="heatlossjs/style.css?v=1" />
     <div id="heatloss"></div>
